# lemone-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  ruff.yml  test.yml  trufflehog.yml
app/: __init__.py  _enums.py  _exceptions.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  async_endpoints.py  sync_endpoints.py
app/core/: __init__.py  classification.py  config.py  embeddings.py  registries.py
app/models/: __init__.py  models.py  request_models.py  response_models.py
app/services/: __init__.py  broker.py  middlewares.py
app/utils/: logger.py
app/workers/: tasks.py
assets/: thumbnail.pxd
make/: dev.mk  variables.mk
tests/: conftest.py  test_async_endpoints.py  test_sync_endpoints.py  test_task_states.py
