[project]
name = "lemone"
version = "0.1.0"
description = "API for processing french tax related texts using specialized models."
authors = [{name = "Louis Brulé Naudet", email = "contact@louisbrulenaudet.com"}]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "aiocache>=0.12.3",
    "dramatiq[redis,watch]>=1.17.1",
    "fastapi[standard]>=0.115.7",
    "httpx>=0.28.1",
    "logfire>=3.3.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sentence-transformers>=3.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pre-commit-uv>=4.1.4",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
    # flake8-print
    "T20",
]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "ANN",
]

[tool.logfire]
pydantic_plugin_record = "all"

[tool.ruff]
fix = true

[tool.pyright]
exclude = [
    "**/tests"
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
